Colaboratory를 통해 생성됨

--- a/DNN_example.ipynb
+++ b/DNN_example.ipynb
@@ -40,72 +40,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3y-3JQP02KIh",
-        "outputId": "0c06e096-8dde-423f-87fe-306eed6f285f",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
-      },
-      "source": [
-        "# Colab과 내 구글 드라이브를 연동합니다.\n",
-        "# 코드를 실행한 후, 하단에 뜨는 링크에 접속하여 계정과 연동합니다.\n",
-        "# 연동 후, 뜨는 코드를 복사하여 하단의 빈칸에 입력하고 엔터키를 눌러줍니다.\n",
-        "\n",
-        "from google.colab import drive\n",
-        "drive.mount('/gdrive', force_remount=True)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Mounted at /gdrive\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "RufQJTFE2r9S",
-        "outputId": "3557b6c9-f8c1-4b76-96eb-7828cffc0c8f",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 53
-        }
-      },
-      "source": [
-        "# 내 구글 드라이브의 주소는 '/gdrive/My Drive'입니다. \n",
-        "# 내 구글드라이브의 데이터셋 위치를 확인하는 과정\n",
-        "\n",
-        "!ls \"/gdrive/My Drive/Colab Notebooks/colab/run_project/dataset\""
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "housing.csv  pima-indians-diabetes.csv\tThoraricSurgery.csv\n",
-            "iris.csv     sonar.csv\t\t\twine.csv\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "Vnya9MFJ3L6X"
       },
       "source": [
-        "# pandas 라이브러리를 불러옵니다.\n",
-        "import pandas as pd # 데이터를 다루기 위한 라이브러리\n",
-        "import matplotlib.pyplot as plt # 그래프를 그릴 떄 주로 사용하는 라이브러리\n",
-        "import seaborn as sns  # matplotlib를 기반으로 보다 정교한 그래프를 그리게끔 도와주는 라이브러리\n",
+        "# 파일 선택을 통해 예제 데이터를 내 컴퓨터에서 불러옵니다.\n",
+        "from google.colab import files\n",
+        "uploaded = files.upload()\n",
+        "my_data = 'pima-indians-diabetes.csv'\n",
         "\n",
-        "dataset = \"/gdrive/My Drive/Colab Notebooks/colab/run_project/dataset/pima-indians-diabetes.csv\"\n",
+        "# pandas 라이브러리를 불러옵니다.\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
         "\n",
         "# 불러온 데이터셋을 적용합니다. 이 때 각 컬럼에 해당하는 이름을 지정합니다.\n",
         "df = pd.read_csv(dataset,\n",
